[package]
name = "blimp_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
fixed = "1.28.0"
nalgebra = "0.33.2"
simba = "0.9.0"
tokio = { version = "1.41.1", features = ["full"] }
typenum = "1.17.0"
blimp_onboard_software = { path = "deps/blimp_onboard_software" }
blimp_ground_ws_interface = { path = "deps/blimp_ground_ws_interface" }
serde = "1.0.215"
postcard = { version = "1.0.10", features = ["use-std"] }
tokio-tungstenite = "0.24.0"
futures-util = "0.3.31"
serde_json = "1.0.132"
